--- a/isis2304-tutorial-arquitectura/WebContent/WEB-INF/ConnectionData/conexion.properties
+++ b/isis2304-tutorial-arquitectura/WebContent/WEB-INF/ConnectionData/conexion.properties
@@ -1,4 +1,4 @@
 url= jdbc:oracle:thin:@fn3.oracle.virtual.uniandes.edu.co\:1521\:prod
-usuario= n.gaitan@uniandes.edu.co\n
-clave= Habbo123
+usuario= ISIS2304A471810
+clave= qzFcLgiHwk
 driver= oracle.jdbc.driver.OracleDriver
